--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 <td>activities [ac]</td>
                 <td>/aktivitás/</td>
                 <td>Aktivitás kiválasztása, majd a kapott linkre való kattintás a válaszott aktivitás elindítása.</td>
-                <td>Hang csatlakozás, Nitro</td>
+                <td>Hang csatlakozás, Nitro*</td>
             </tr>
             <tr>
                 <td>ascii</td>
