--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <div id="Parancsok" class="tabcontent">
         <input type="text" id="pInput" onkeyup="searchFunction()" placeholder="Parancs keresése...">
-        <button type="button" class="collapsible first">Zenelejátszás</button>
+        <button type="button" class="collapsible">Zenelejátszás</button>
         <div class="content">
           <table class="parancsok" id="parancsok">
             <tr>
