--- a/index.html
+++ b/index.html
@@ -433,6 +433,12 @@
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr>
+                        <td>saveroles [sr]</td>
+                        <td>-</td>
+                        <td>Felhasználó rangjainak megjegyzése kilépéskor, amiket visszalépéskor visszakap.</td>
+                        <td>Adminisztrátor</td>
+                    </tr>
+                    <tr>
                         <td>slowmode [sm]</td>
                         <td>/csatorna/ &ltidő&gt</td>
                         <td>Lassított mód bekapcsolása jelenlegi vagy megadott csatornára, megadott időre.</td>
