--- a/index.html
+++ b/index.html
@@ -653,14 +653,15 @@
                         title="Vissza a főoldalra" alt="Vissza a főoldalra"></td>
             </tr>
             <tr>
-                <td class="felsorol">Rendszeres frissítések, új funkciók és fejlesztések | <p>Changelog</p></td>
+                <td class="felsorol">sasOS egy rendszeresen fejlesztett, JavaScript alapú Discord bot.</td>
             </tr>
             <tr>
                 <td class="felsorol">
                     <p>
+                        <a href="https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands" target="_blank">Meghívás</a> |
                         <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> |
                         <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> |
-                    </p>
+                         </p>
                     <p class="verzio" id="message">...</p>
                 </td>
             </tr>
