--- a/index.html
+++ b/index.html
@@ -127,13 +127,10 @@
                     <td class="felsorol">Profilképek különböző felbontásokban | <p>Avatar</p></td>
                 </tr>
                 <tr>
-                    <td class="felsorol">Youtube videónézés és játékok indítása | <p>Activities</p></td>
-                </tr>
-                <tr>
                     <td class="felsorol">Szavazások létrehozása | <p>Szavazás</p></td>
                 </tr>
                 <tr>
-                    <td class="felsorol">Nekos.best integrálás | <p>Nekosbest</p></td>
+                    <td class="felsorol">Nekos.best integráció | <p>Nekosbest</p></td>
                 </tr>
                 <tr>
                     <td class="felsorol utolso">További parancsok és használatuk | <p>Help</p></td>
@@ -468,12 +465,6 @@
                         <td class="title required">Szükséges</td>
                     </tr>
                     <tr>
-                        <td>activities [ac]</td>
-                        <td>/aktivitás/</td>
-                        <td>Aktivitás kiválasztása, majd a kapott linkre való kattintás a válaszott aktivitás elindítása.</td>
-                        <td>Hang csatlakozás, Nitro*</td>
-                    </tr>
-                    <tr>
                         <td>ascii</td>
                         <td>&ltszöveg&gt</td>
                         <td>Beírt szöveg ASCII-képpé szerkesztése, beépített parancs használata esetén megadhatóak betűtípusok: https://pastebin.com/AVsvB8Ju.</td>
@@ -653,15 +644,13 @@
                         title="Vissza a főoldalra" alt="Vissza a főoldalra"></td>
             </tr>
             <tr>
-                <td class="felsorol">sasOS egy rendszeresen fejlesztett, JavaScript alapú Discord bot.</td>
+                <td class="footer">sasOS egy aktívan fejlesztett, JavaScript alapú Discord bot.</td>
             </tr>
             <tr>
-                <td class="felsorol">
-                    <p>
-                        <a href="https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands" target="_blank">Meghívás</a> |
-                        <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> |
-                        <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> |
-                         </p>
+                <td class="footer">
+                    <a href="https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands" target="_blank">Meghívás</a> |
+                    <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> |
+                    <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> |
                     <p class="verzio" id="message">...</p>
                 </td>
             </tr>
