--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="icon"
-        href="https://cdn.discordapp.com/attachments/1000529467262914600/1048656664997400687/011a7bc2fcfc7cc84e21067c32f5b894.png">
+        href="icon.png">
     <title>sasOS | Discord Bot</title>
 
     <button onclick="topFunction()" id="topButton" title="Fel">Fel</button>
