--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                     <tr>
                         <td>most</td>
                         <td>-</td>
-                        <td>Különböző információk a jelenleg lejátszott zenéről, és annak irányítása.</td>
-                        <td>Hang csatlakozás*</td>
+                        <td>Különböző információk a jelenleg lejátszott zenéről.</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <td>pause [pa]</td>
@@ -190,7 +190,7 @@
                     </tr>
                     <tr>
                         <td>play [p;join]</td>
-                        <td>/zene név/link/playlist/album link/</td>
+                        <td>&ltzene név/link/playlist/album link&gt</td>
                         <td>Zene nevének/linkjének vagy playlist/album linkjének beírása után megadott zene lejátszása, több száz oldalról.</td>
                         <td>Hang csatlakozás</td>
                     </tr>
@@ -214,7 +214,7 @@
                     </tr>
                     <tr>
                         <td>remove [rem]</td>
-                        <td>&ltzene száma&gt</td>
+                        <td>&ltzene sorszáma&gt</td>
                         <td>Zene sorszámának beírása után annak törlése a lejátszási sorból.</td>
                         <td>Hang csatlakozás</td>
                     </tr>
@@ -262,8 +262,8 @@
                     </tr>
                     <tr>
                         <td>volume [v]</td>
-                        <td>&lthangerő&gt</td>
-                        <td>Zene hangerejének változtatása maximum 250-ig.</td>
+                        <td>/hangerő/</td>
+                        <td>Zene hangerejének változtatása maximum 500-ig.</td>
                         <td>Hang csatlakozás</td>
                     </tr>
                 </table>
@@ -453,7 +453,7 @@
                     <tr>
                         <td>zenecsatorna [zcs]</td>
                         <td>/csatorna/</td>
-                        <td>Zene parancsok beállítása, hogy csak a megadott csatornában legyenek használhatóak.</td>
+                        <td>Zene-parancsok beállítása, hogy csak a megadott csatornában legyenek használhatóak.</td>
                         <td>Adminisztrátor</td>
                     </tr>
                 </table>
