--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                     </tr>
                     <tr>
                         <td>membercounter [mc]</td>
-                        <td>&ltcsatorna (új) neve&gt</td>
+                        <td>/csatorna (új) neve/</td>
                         <td>Egyedi név megadása után felhasználó számláló csatorna létrehozása, vagy beállított csatorna nevének frissítése.</td>
                         <td>Adminisztrátor</td>
                     </tr>
