--- a/index.html
+++ b/index.html
@@ -99,9 +99,6 @@
                     <td><img class="gif" src="https://i.imgur.com/vkpbGUo.gif" alt="Új prefix hozzáadása"></td>
                 </tr>
                 <tr>
-                    <td class="felsorol elso">Prefix megváltoztatása | <p>Prefix</p></td>
-                </tr>
-                <tr>
                     <td class="felsorol">Parancsok átnevezése | <p>Alias</p></td>
                 </tr>
                 <tr>
@@ -367,12 +364,6 @@
                         <td class="title required">Szükséges</td>
                     </tr>
                     <tr>
-                        <td>alias [al]</td>
-                        <td>&ltparancs&gt /új név/</td>
-                        <td>Maximum 5 egyedi név beállítása beépített parancsokhoz (Prefix).</td>
-                        <td>Adminisztrátor</td>
-                    </tr>
-                    <tr>
                         <td>autoroles [ar]</td>
                         <td>/@rang/rangID/rang név/</td>
                         <td>Rangok kezelése, amiket az újonnan csatlakozott tagok automatikusan megkapnak.</td>
@@ -411,13 +402,7 @@
                     <tr>
                         <td>permissions [perms]</td>
                         <td>/parancs/ /@rang/rangID/név/</td>
-                        <td>Parancsok egyedi ranghoz való kötése az alapértelmezett jogosultság helyett (kivéve Konfigurációs és Információs parancsok)</td>
-                        <td>Adminisztrátor</td>
-                    </tr>
-                    <tr>
-                        <td>prefix</td>
-                        <td>/új prefix/</td>
-                        <td>Parancsok használatához használt előjelek hozzáadása, visszaállítása vagy beállítottak megjelenítése (max. 5 karakter, max 3db).</td>
+                        <td>Parancsok egyedi ranghoz való kötése az alapértelmezett jogosultság helyett (max. 5 rang) (kivéve Konfigurációs és Információs parancsok)</td>
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr>
