--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button onclick="topFunction()" id="topButton" title="Fel">Fel</button>
     <div class="tab">
         <button class="tablinks invite"
-            onclick="window.open('https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands', '_blank')">Meghívás
+            onclick="window.open('https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands', '_blank')">Meghívás
         </button>
         <button class="tablinks"
             onclick="openTab(event, 'Parancsok');topFunction()">Parancsok
@@ -412,6 +412,12 @@
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr>
+                        <td>serversettings</td>
+                        <td>-</td>
+                        <td>A szerverre beállított sasOS-konfigurációk listája.</td>
+                        <td>Adminisztrátor</td>
+                    </tr>
+                    <tr>
                         <td>toggle [t]</td>
                         <td>/parancs/</td>
                         <td>sasOS parancsainak ki- és bekapcsolása (kivéve Konfigurációs és Információs parancsok), vagy kikapcsolt parancsok megjelenítése.</td>
@@ -612,7 +618,7 @@
             </tr>
             <tr>
                 <td class="footer">
-                    <a href="https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands" target="_blank">Meghívás</a> |
+                    <a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank">Meghívás</a> |
                     <a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> |
                     <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> |
                     <p class="verzio" id="message">...</p>
