--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <nav>
         <ul>
-            <li class="active"><a href="./index.html">Főoldal</a></li>
-            <li><a href="commands/index.html">Parancsok</a></li>
+            <li class="active"><a href="./index">Főoldal</a></li>
+            <li><a href="./commands.html">Parancsok</a></li>
             <li><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank" class="invite"><img src="media/icon_transparent.png" alt="Ikon" class="nav-icon">Meghívás</a></li>
         </ul>
     </nav>
