--- a/commands.html
+++ b/commands.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="icon" href="../media/icon.png">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./media/icon.png">
     <title>Parancsok - sasOS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="../index.html">Főoldal</a></li>
-            <li class="active"><a href="./index.html">Parancsok</a></li>
-            <li><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank" class="invite"><img src="../media/icon_transparent.png" alt="Ikon" class="nav-icon">Meghívás</a></li>
+            <li><a href="./index.html">Főoldal</a></li>
+            <li class="active"><a href="./commands.html">Parancsok</a></li>
+            <li><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank" class="invite"><img src="./media/icon_transparent.png" alt="Ikon" class="nav-icon">Meghívás</a></li>
         </ul>
     </nav>
 
@@ -412,7 +412,7 @@
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="../index.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
