--- a/commands.html
+++ b/commands.html
@@ -169,7 +169,7 @@
                 <tr>
                     <td>queue</td>
                     <td>A lejátszási sorban lévő zenék megjelenítése.</td>
-                    <td>Hang csatlakozás*</td>
+                    <td>-</td>
                 </tr>
                 <tr>
                     <td>remove</td>
@@ -412,7 +412,7 @@
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="./index.js"></script>
+    <script src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
