--- a/commands.html
+++ b/commands.html
@@ -7,16 +7,29 @@
     <link rel="icon" href="./media/icon.png">
     <title>Parancsok - sasOS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/3b3f778d59.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="./index.html">Főoldal</a></li>
-            <li class="active"><a href="./commands.html">Parancsok</a></li>
-            <li><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank" class="invite"><img src="./media/icon_transparent.png" alt="Ikon" class="nav-icon">Meghívás</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-sm sticky-top">
+        <div class="container-fluid justify-content-center">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Menüsáv lenyitása">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                <ul class="navbar-nav text-center">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html" title="Főbb funkciók megtekintése">Főoldal</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active" href="commands.html" title="Összes parancs megtekintése">Parancsok</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link invite" href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank" title="Meghívás a szerveredre"><img src="media/icon_transparent.png" alt="Ikon" class="nav-icon">Meghívás</a></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-
     <div class="container commands-container">
         <div class="row justify-content-center">
             <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 title">
