--- a/index.html
+++ b/index.html
@@ -7,113 +7,130 @@
     <link rel="icon" href="media/icon.png">
     <title>Főoldal - sasOS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/3b3f778d59.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li class="active"><a href="./index">Főoldal</a></li>
-            <li><a href="./commands.html">Parancsok</a></li>
-            <li><a href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank" class="invite"><img src="media/icon_transparent.png" alt="Ikon" class="nav-icon">Meghívás</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-sm sticky-top">
+        <div class="container-fluid justify-content-center">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Menüsáv lenyitása">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                <ul class="navbar-nav text-center">
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active" aria-current="page" href="index.html" title="Főbb funkciók megtekintése">Főoldal</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="commands.html" title="Összes parancs megtekintése">Parancsok</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link invite" href="https://discord.com/oauth2/authorize?client_id=742556187425505312&permissions=1099816823958&integration_type=0&scope=bot+applications.commands" target="_blank" title="Meghívás a szerveredre"><img src="media/icon_transparent.png" alt="Ikon" class="nav-icon">Meghívás</a></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 title">
-                <div class="row">
-                    <div class="col-12"><h1>sasOS főbb funkciói</h1></div>
-                    <hr>
+        <header>
+            <div class="row justify-content-center">
+                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 title">
+                    <div class="row">
+                        <div class="col-12"><h1>sasOS főbb funkciói</h1></div>
+                        <hr>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent moderation-showcase">
-                <div class="row">
-                    <div class="col-12"><h2>Moderálás</h2></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><h3>Korszerű moderációs parancsok, korábbi eljárások mentése</h3></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><img class="img-fluid gif" src="media/ban.gif" alt="A Ban parancs bemutatása"></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">Tagok kitiltása, kirúgása, felfüggesztése és figyelmeztetése</p></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">Üzenetek törlése | Csatornák lezárása | Lassított mód beállítása</p></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">Moderációk feljegyzése, és visszanézése sorszám alapján</p></div>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent music-showcase">
-                <div class="row">
-                    <div class="col-12"><h2>Zenelejátszás</h2></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><h3>Zenék lejátszása könnyedén, több száz oldalról</h3></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><img class="img-fluid gif" src="media/play.gif" alt="A Play parancs bemutatása"></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">Lejátszás | Zeneszöveg keresése | Megkeverés | Filterek alkalmazása</p></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">Átugrás | Visszalépés | Megállítás | Elindítás | Ismétlés állítása</p></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">Zenelejátszás ranghoz vagy csatornához kötése</p></div>
+        </header>
+        <main>
+            <div class="row justify-content-center">
+                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent moderation-showcase">
+                    <div class="row">
+                        <div class="col-12"><h2>Moderálás</h2></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><h3>Korszerű moderációs parancsok, korábbi eljárások mentése</h3></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><img class="img-fluid gif" src="media/ban.gif" alt="A Ban parancs bemutatása"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">Tagok kitiltása, kirúgása, felfüggesztése és figyelmeztetése</p></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">Üzenetek törlése | Csatornák lezárása | Lassított mód beállítása</p></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">Moderációk feljegyzése, és visszanézése sorszám alapján</p></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent config-showcase">
-                <div class="row">
-                    <div class="col-12"><h2>Testreszabás</h2></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><h3>Egyedi funkciók hozzáadása a szerveredhez</h3></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><img class="img-fluid gif" src="media/cc.gif" alt="A Play parancs bemutatása"></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">Egyedi parancsok létrehozása | Üdvözlő- és Búcsúüzenet beállítása</p></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">Tagok rangjainak megjegyzése | Automatikus rangok beállítása</p></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">Parancsok kikapcsolása vagy egyedi ranghoz kötése</p></div>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent misc-showcase">
-                <div class="row">
-                    <div class="col-12"><h2>Ezenfelül</h2></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><h3>További parancsok és funkciók</h3></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><img class="img-fluid gif" src="media/userinfo.gif" alt="A Play parancs bemutatása"></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">Információk a szerverről, tagokról | Profilképek lekérése</p></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">ASCII-kép keszítése | Szóharc | Nekosbest API</p></div>
-                </div>
-                <div class="row">
-                    <div class="col-12"><p class="command-showcase">8ball | Kő-papír-olló | Érme feldobás</p></div>
+            <div class="row justify-content-center">
+                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent music-showcase">
+                    <div class="row">
+                        <div class="col-12"><h2>Zenelejátszás</h2></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><h3>Zenék lejátszása könnyedén, több száz oldalról</h3></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><img class="img-fluid gif" src="media/play.gif" alt="A Play parancs bemutatása"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">Lejátszás | Zeneszöveg keresése | Megkeverés | Filterek alkalmazása</p></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">Átugrás | Visszalépés | Megállítás | Elindítás | Ismétlés állítása</p></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">Zenelejátszás ranghoz vagy csatornához kötése</p></div>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="row justify-content-center">
+                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent config-showcase">
+                    <div class="row">
+                        <div class="col-12"><h2>Testreszabás</h2></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><h3>Egyedi funkciók hozzáadása a szerveredhez</h3></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><img class="img-fluid gif" src="media/cc.gif" alt="A Play parancs bemutatása"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">Egyedi parancsok létrehozása | Üdvözlő- és Búcsúüzenet beállítása</p></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">Tagok rangjainak megjegyzése | Automatikus rangok beállítása</p></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">Parancsok kikapcsolása vagy egyedi ranghoz kötése</p></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent misc-showcase">
+                    <div class="row">
+                        <div class="col-12"><h2>Ezenfelül</h2></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><h3>További parancsok és funkciók</h3></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><img class="img-fluid gif" src="media/userinfo.gif" alt="A Play parancs bemutatása"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">Információk a szerverről, tagokról | Profilképek lekérése</p></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">ASCII-kép keszítése | Szóharc | Nekosbest API</p></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12"><p class="command-showcase">8ball | Kő-papír-olló | Érme feldobás</p></div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
     <footer>
         <div class="container">
