--- a/commands.html
+++ b/commands.html
@@ -51,7 +51,7 @@
                 <caption class="text-center">
                     <details>
                         <summary>Súgó</summary>
-                        <table class="table legend">
+                        <table class="table table-hover commands legend">
                             <tr data-command="example">
                                 <td>parancs<br>● alparancs <code>paraméter1</code> <code class="optional">paraméter2</code></td>
                                 <td>Ez egy példa parancs.</td>
