--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="col-12"><h3>Korszerű moderációs parancsok, korábbi eljárások mentése</h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="media/ban.gif" alt="A Ban parancs bemutatása"></div>
+                        <div class="col-12"><img class="img-fluid gif" src="media/ban.gif" alt="A kitiltás parancsának bemutatása indok és időtartam megadásával."></div>
                     </div>
                     <div class="row">
                         <div class="col-12"><p class="command-showcase">Tagok kitiltása, kirúgása, felfüggesztése és figyelmeztetése</p></div>
@@ -73,7 +73,7 @@
                         <div class="col-12"><h3>Zenék lejátszása könnyedén, több száz oldalról</h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="media/play.gif" alt="A Play parancs bemutatása"></div>
+                        <div class="col-12"><img class="img-fluid gif" src="media/play.gif" alt="A lejátszás parancsának bemutatása 'epic gaming music' paraméter megadásával."></div>
                     </div>
                     <div class="row">
                         <div class="col-12"><p class="command-showcase">Lejátszás | Zeneszöveg keresése | Megkeverés | Filterek alkalmazása</p></div>
@@ -95,7 +95,7 @@
                         <div class="col-12"><h3>Egyedi funkciók hozzáadása a szerveredhez</h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="media/cc.gif" alt="A Play parancs bemutatása"></div>
+                        <div class="col-12"><img class="img-fluid gif" src="media/cc.gif" alt="Az egyedi parancs hozzáadásának bemutatása 'sasos' nevű paranccsal és 'A legjobb bot' válasz megadásával."></div>
                     </div>
                     <div class="row">
                         <div class="col-12"><p class="command-showcase">Egyedi parancsok létrehozása | Üdvözlő- és Búcsúüzenet beállítása</p></div>
@@ -117,7 +117,7 @@
                         <div class="col-12"><h3>További parancsok és funkciók</h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-12"><img class="img-fluid gif" src="media/userinfo.gif" alt="A Play parancs bemutatása"></div>
+                        <div class="col-12"><img class="img-fluid gif" src="media/userinfo.gif" alt="Információk lekérése felhasználókról bemutatása 'matte' nevű felhasználóról."></div>
                     </div>
                     <div class="row">
                         <div class="col-12"><p class="command-showcase">Információk a szerverről, tagokról | Profilképek lekérése</p></div>
@@ -127,6 +127,23 @@
                     </div>
                     <div class="row">
                         <div class="col-12"><p class="command-showcase">8ball | Kő-papír-olló | Érme feldobás</p></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 title">
+                    <div class="row">
+                        <div class="col-12"><h1>Legutóbbi változások</h1></div>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-10 col-sm-11 col-md-9 col-lg-7 col-xl-6 tabcontent changelog-showcase">
+                    <div class="row">
+                        <div class="col-12">
+                            <p id="changelog">...</p>
+                        </div>
                     </div>
                 </div>
             </div>
