--- a/commands.html
+++ b/commands.html
@@ -273,8 +273,8 @@
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr data-command="modsettings">
-                        <td>modsettings<br>● módosítás <code>logolás</code> <code>dm</code><br>● beállítások</td>
-                        <td>Beállítható, hogy a sasOS által végzett moderációk fel legyenek jegyezve, illetve elküldve a felhasználóknak.</td>
+                        <td>modsettings<br>● módosítás <code>küldés</code> <code>logolás</code> <code>dm</code><br>● beállítások</td>
+                        <td>Beállítható, hogy a sasOS által végzett moderációk el legyenek küldve a csatornába, fel legyenek jegyezve, illetve el legyenek küldve privát üzenetben.</td>
                         <td>Adminisztrátor</td>
                     </tr>
                     <tr data-command="permissions">
